First push with CSS

--- a/index.html
+++ b/index.html
@@ -2,33 +2,31 @@
 <html>
 <head>
 	<title>Resume: Ahmed Krdžalić</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<div id="head_section"> <!-- for future changes (CSS) -->
-		<table>
-			<tr>
-				<td><img src="my_profile_image.jpg" alt="Imge of myself"></td>
-				<td><h1>AHMED</h1><h1>KRDŽALIĆ</h1></td>
-			</tr>
-		</table>
-		<h2>Student of Software Engineering / Full-Time Husband</h2>
-
-		<h4>Do You have any questions? Write to me at <a href="mailto:ahmed.krdzalic@gmail.com">ahmed.krdzalic@gmail.com</a></h4>
-		<a href="https://www.facebook.com/ahmedkrdzalic00"><img src="fb.png"></a>
-		<a href="https://www.linkedin.com/in/ahmed-krd%C5%BEali%C4%87/"><img src="linkedin.png"></a>
-		<a href="https://github.com/ahmedkrdzalic"><img src="github.png"></a>
+	<div class="head_section"> <!-- for future changes (CSS) -->
+		<!-- <img src="my_profile_image.jpg" alt="Imge of myself"> -->
+		<div class="head_info">
+			<h1>Ahmed Krdžalić</h1>
+			<h4>Student of Software Engineering / Full-Time Husband</h4>
+		</div>
+		
+		<div class="social_net_icons">
+			<h4>Do You have any questions? Write to me at <a href="mailto:ahmed.krdzalic@gmail.com">ahmed.krdzalic@gmail.com</a></h4>
+			<a href="https://www.facebook.com/ahmedkrdzalic00"><img src="fb.png"></a>
+			<a href="https://www.linkedin.com/in/ahmed-krd%C5%BEali%C4%87/"><img src="linkedin.png"></a>
+			<a href="https://github.com/ahmedkrdzalic"><img src="github.png"></a>
+		</div>
 	</div>
-	<hr><hr>
-	<div id="body_section"> <!-- for future changes (CSS) -->
+	<div class="elements"> <!-- for future changes (CSS) -->
 		<div id="who_am_i">
-			
 			<h2>WHO AM I?</h2>
 			<p><em>TALENTED WEB DESIGNER</em></p>
 			<p>
 				I'm 21 years old located in Sarajevo (for now). I have married a beautiful girl named Sara and she is my support forlife. <br>I am currently attending third year at college, epartment Software Engineering. <br>For now, I do not have any job. My passion is learning new things, new technologies in IT. <br>I like to be familiar, but not far in details, with as many fields, in IT, as i can to be able to "predict" some trends and new things that will happen. 
 			</p>
 		</div>
-		<hr>
 		<div id="personal_info">
 			<h2>PERSONAL INFO</h2>
 			<ul>
@@ -39,7 +37,6 @@
 				<li><b>Address:</b> Latička, 2A, Stup, Ilidža, Sarajevo</li>
 			</ul>
 		</div>
-		<hr>
 		<div id="qualities_and_skills">
 			<h2>QUALITIES AND SKILLS</h2>
 			<dl>
@@ -62,7 +59,6 @@
 					<dd>Turkish: A1</dd>
 			</dl>
 		</div>
-		<hr>
 		<div id="education">
 			<h2>EDUCATION</h2>
 			<table>
@@ -84,7 +80,6 @@
 				</tr>
 			</table>
 		</div>
-		<hr>
 		<div id="experience">
 			<h2>EXPERIENCE</h2>
 			<table>
@@ -98,7 +93,6 @@
 				</tr>
 			</table>
 		</div>
-		<hr>
 		<div id="hobbies">
 			<h2>HOBBIES</h2>
 			<ul>
@@ -106,9 +100,7 @@
 				<li>Visiting Mountains</li>
 				<li>Graphic Design</li>
 			</ul>
-			<hr>
 		</div>
-		
 	</div>
 </body>
 </html>
