--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 	<div class="parent_container">
 		<div class="head_container">
 			<div class="head_container_info">
-				<h1>Ahmed Krdžalić</h1>
-				<h3>Student of Software Engineering / Full-Time Husband</h3>
+				<div class="name">Ahmed Krdžalić</div>
+				<div class="explanation">Student of Software Engineering / Full-Time Husband</div>
 			</div>
 			<div class="head_container_contact">
-				<h3>Do You have any questions? Write to me at <a href="mailto:ahmed.krdzalic@gmail.com">ahmed.krdzalic@gmail.com</a></h3>
+				<div>Do You have any questions?<br>Write to me at <a href="mailto:ahmed.krdzalic@gmail.com">ahmed.krdzalic@gmail.com</a></div>
 			</div>
 		</div>
 		<div class="bar">
-			bar
+			
 		</div>
 		<div class="body_container">
 			<div class="body_container_about">
