--- a/index.html
+++ b/index.html
@@ -20,22 +20,29 @@
 		</div>
 		<div class="body_container">
 			<div class="body_container_about">
+				<div class="color_flag"></div>
 				<h2>WHO AM I?</h2>
-				<h3>TALENTED WEB DESIGNER</h3>
-				I'm 21 years old located in Sarajevo (for now). I have married a beautiful girl named Sara and she is my support forlife. I am currently attending third year at college, epartment Software Engineering. For now, I do not have any job. My passion is learning new things, new technologies in IT. I like to be familiar, but not far in details, with as many fields, in IT, as i can to be able to "predict" some trends and new things that will happen.
+				<h4>TALENTED WEB DESIGNER</h4>
+				<div class="text_content">
+					I'm 21 years old located in Sarajevo (for now). I have married a beautiful girl named Sara and she is my support forlife. I am currently attending third year at college, department of Software Engineering. For now, I do not have any job. My passion is learning new things, new technologies in IT. I like to be familiar, but not far in details, with as many fields, in IT, as i can to be able to "predict" some trends and new things that will happen.
+				</div>
 			</div>
 			<div class="body_container_info">
+				<div class="color_flag"></div>
 				<h2>PERSONAL INFO</h2>
-				<ul>
-					<li><b>Years</b>: 21</li>
-					<li><b>E-mail:</b> <a href="mailto:ahmed.krdzalic@gmail.com">ahmed.krdzalic@gmail.com</a></li>
-					<li><b>Phone:</b> 061-043-037</li>
-					<li><b>Birthdate:</b> 07.01.1999</li>
-					<li><b>Address:</b> Latička, 2A, Stup, Ilidža, Sarajevo</li>
-				</ul>
+				<div class="text_content">
+					<ul>
+						<li><b>Years</b>: 21</li>
+						<li><b>E-mail:</b> <a href="mailto:ahmed.krdzalic@gmail.com">ahmed.krdzalic@gmail.com</a></li>
+						<li><b>Phone:</b> 061-043-037</li>
+						<li><b>Birthdate:</b> 07.01.1999</li>
+						<li><b>Address:</b> Latička, 2A, Stup, Ilidža, Sarajevo</li>
+					</ul>
+				</div>
 			</div>
 			<div class="body_container_expertise">
-				body_container_expertise
+				<div class="color_flag"></div>
+				<h2>EXPERTISE</h2>
 			</div>
 			<div class="body_container_resume">
 				body_container_resume
