added/changed shadows, added animation for cards

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div class="head_container">
 			<div class="head_container_info">
 				<div class="name">Ahmed Krdžalić</div>
-				<div class="explanation">Student of Software Engineering / Full-Time Husband</div>
+				<div class="explanation">Student of Software Engineering <span style="color: #199cdc;">/</span> Full-Time Husband</div>
 			</div>
 			<div class="head_container_contact">
 				<div>Do You have any questions?<br>Write to me at <a href="mailto:ahmed.krdzalic@gmail.com">ahmed.krdzalic@gmail.com</a></div>
