--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 			</div>
 		</div>
 		<div class="bar">
-			
+			<div class="profile_image">
+				<img src="images/my_profile_image.jpg" id="profile_image">
+			</div>
 		</div>
 		<div class="body_container">
 			<div class="body_container_about">
@@ -31,6 +33,7 @@
 				<div class="color_flag"></div>
 				<h2>PERSONAL INFO</h2>
 				<div class="text_content">
+					<div class="spacener_2em"></div>
 					<ul>
 						<li><b>Years</b>: 21</li>
 						<li><b>E-mail:</b> <a href="mailto:ahmed.krdzalic@gmail.com">ahmed.krdzalic@gmail.com</a></li>
@@ -39,10 +42,26 @@
 						<li><b>Address:</b> Latička, 2A, Stup, Ilidža, Sarajevo</li>
 					</ul>
 				</div>
+				<div>
+					<a href="https://www.facebook.com/ahmedkrdzalic00"><img src="images/icons/facebook.svg" class="icon_soc_media"></a>
+					<a href="https://www.linkedin.com/in/ahmed-krd%C5%BEali%C4%87/"><img src="images/icons/linkedin.svg" class="icon_soc_media"></a>
+					<a href="https://github.com/ahmedkrdzalic"><img src="images/icons/github.svg" class="icon_soc_media"></a>
+				</div>
 			</div>
-			<div class="body_container_expertise">
+			<div class="body_container_projects">
 				<div class="color_flag"></div>
-				<h2>EXPERTISE</h2>
+				<h2>PROJECTS</h2>
+				<div class="card_content">
+					<h3>Wordpress Website</h3>
+					Currently making website for one German company <a href="http://aidabauelemente.de/">aidabauelemente.de</a>
+					<h3>Making My Resume From Scratch</h3>
+					<ol>
+						<li><a href="https://ahmedkrdzalic.github.io/CS412_P1/">Project 1 (HTML)</a></li>
+						<li><a href="https://ahmedkrdzalic.github.io/CS412_P2/">Project 2 (HTML + CSS)</a></li>
+						<li><a href="https://ahmedkrdzalic.github.io/CS412_P3/">Project 3 (HTML + CSS + JS)</a></li>
+						<li><a href="https://ahmedkrdzalic.github.io/CS412_P4/">Project 4 (HTML + CSS + JS + PHP)</a></li>
+					</ol>
+				</div>
 			</div>
 
 			<div class="body_container_resume">
@@ -51,12 +70,10 @@
 					<h2>EXPERTISE</h2>
 					<img src="images/icons/card_expertise_icon.svg" id="card_expertise_icon" class="icon">
 					<div class="card_content">
-						<h3>WebDesigner – Mutation Media</h3>
-						Feb 2015 – Current<br>
-						Ut enim ad minim veniam, quis nostrud exerc, irure dolor in reprehend.
-						<h3>Web Developer – Mutation Media</h3>
-						Sept 2015 – Nov 2015<br>
-						Ut enim ad minim veniam, quis nostrud exerc, irure dolor in reprehend.
+						<h3>Frontend Developer – HTML/CSS</h3>
+						<h3>Wordpress Freelancer – Websites</h3>
+						<h3>Graphic Designer – Print On Demand</h3>
+						My store: <a href="https://Livity.redbubble.com">Livity</a>
 					</div>
 				</div>
 				<div class="card" id="card_education">
@@ -64,7 +81,14 @@
 					<h2>EDUCATION</h2>
 					<img src="images/icons/card_education_icon.svg" id="card_education_icon" class="icon">
 					<div class="card_content">
-						
+						<dl class="edu_dl">
+							<dt>O.Š. Rešad Kadić</dt>
+								<dd>2005-2014</dd>							
+							<dt>Behram Begova Medresa</dt>
+								<dd>2014-2018</dd>
+							<dt><a href="https://fens.ius.edu.ba/"> International University of Sarajevo - FENS</a></dt>
+								<dd>2018-<span class="blue_text_style">Present</span></dd>
+						</dl>
 					</div>
 				</div>
 				<div class="card" id="card_skills">
@@ -77,6 +101,7 @@
 							<li>Python</li>
 							<li>Java</li>
 							<li>C++</li>
+							<li>Wordpress</li>
 							<li>Photoshop</li>
 							<li>Driving Licence (B)</li>
 						</ul>
@@ -89,7 +114,7 @@
 					<div class="card_content">
 						<ul>
 							<li>Working out</li>
-							<li>Visiting Mountains</li>
+							<li>Hiking</li>
 							<li>Graphic Design</li>
 						</ul>
 					</div>
